logs/02_eda_visualisation.log
=== STDOUT ===

=== STDERR ===
  File "/home/aptitek/Documents/Aptispace/datascience/lab/projet/src/02_eda_visualisation.py", line 17
    %matplotlib inline
    ^
SyntaxError: invalid syntax
